// LINT: LEGACY_NAMES
syntax = "proto3";

package google.test.remote.web.model;

option java_package = "androidx.test.espresso.web.proto.matcher";

import "google/protobuf/any.proto";

message WithBodyMatcherProto {
  string id = 1;
  google.protobuf.Any bodyMatcher = 2;
}

message HasElementWithIdMatcherProto {
  string id = 1;
  bytes elementId = 2;
}

message ElementByIdMatcherProto {
  string id = 1;
  bytes elementId = 2;
  google.protobuf.Any elementMatcher = 3;
}

message HasElementWithXPathMatcherProto {
  string id = 1;
  bytes xpath = 2;
}

message ElementByXPathMatcherProto {
  string id = 1;
  bytes xpath = 2;
  google.protobuf.Any elementMatcher = 3;
}

message WithTextContentMatcherProto {
  string id = 1;
  google.protobuf.Any textContentMatcher = 2;
}
